body margin fixed, mobile view left & right paddings fixed now 2 cards columns instead of 1 are visible

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -3,7 +3,7 @@
     position: relative;
     height: auto;
     margin: 0;
-    padding: 1em 1em;
+    padding: 1em 0.5em;
     flex-direction: column;
     overflow-wrap: break-word;
     padding-bottom: 40px;
