--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
     display: flex;
     height: 100%;
     width: 100%;
-    margin: none;
+    margin: 0;
     max-height: 100vh;
     max-width: 100vw;
    flex-direction: column;
